| Bug #53987 | Threshold for timerHandlingLab-warning is too low | ||
|---|---|---|---|
| Submitted: | 26 May 2010 9:23 | Modified: | 12 Aug 2010 7:14 |
| Reporter: | Geert Vanderkelen | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S3 (Non-critical) |
| Version: | mysql-5.1-telco-7.0 | OS: | Any |
| Assigned to: | Jonas Oreland | CPU Architecture: | Any |
[11 Aug 2010 7:17]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/115452 3244 Jonas Oreland 2010-08-11 ndb - bug#53987 - "improve" timehandling printouts
[11 Aug 2010 9:38]
Bugs System
Pushed into mysql-5.1-telco-6.3 5.1.47-ndb-6.3.36 (revid:jonas@mysql.com-20100811093036-c1h4p730hkrfy1kg) (version source revid:jonas@mysql.com-20100811071642-ifh0r7hnxf2qorrj) (merge vers: 5.1.47-ndb-6.3.36) (pib:20)
[11 Aug 2010 9:38]
Bugs System
Pushed into mysql-5.1-telco-7.0 5.1.47-ndb-7.0.17 (revid:jonas@mysql.com-20100811093545-3huy9nqun7g2yit7) (version source revid:jonas@mysql.com-20100811093430-i42i0auiuox2lwv3) (merge vers: 5.1.47-ndb-7.0.17) (pib:20)
[11 Aug 2010 9:45]
Jonas Oreland
pushed to 6.3.36, 7.0.17 and 7.1.6
[12 Aug 2010 7:14]
Jon Stephens
Documented bugfix in the NDB-6.3.36, 7.0.17, and 7.1.6 changelogs, as follows:
An excessive number of timeout warnings (normally used only
for debugging) were written to the data node logs.
Closed.

Description: Data nodes write a Warning message to their outlog when it is staling and time shifted: For example: WARNING: timerHandlingLab now: 40487176200 sent: 40487176150 diff: 50 WARNING: timerHandlingLab now: 40500964820 sent: 40500964770 diff: 50 The above messages are handy to debug when problem occur, but they tend to flood the logs making people nervous. How to repeat: . Suggested fix: Put the threshold higher, instead of 50, set it to 1000 for a WARNING. Maybe put a INFO for anything between 50 and 1000, or just don't print anything. src/kernel/blocks/qmgr/QmgrMain.cpp if (TcurrentTime >= sent + 1000 || (TcurrentTime < sent)) { jam(); ndbout_c("WARNING: timerHandlingLab now: %llu sent: %llu diff: %d", TcurrentTime, sent, int(TcurrentTime - sent)); }