ndb - bug#53987 - "improve" timehandling printouts